[package]
name = "fusta"
version = "1.5.3"
authors = ["Franklin Delehelle <delehelle@ens.fr>"]
edition = "2018"
description = "FUSTA leverages the FUSE interface transparently manipulate multiFASTA files as single files"

[dependencies]
anyhow = "1"
ascii_table = "3"
clap = "2.0"
ctrlc = { version = "3.0", features = ["termination"] }
daemonize = "0.4"
fuser = "0.9"
lazy_static = "1"
libc = "0.2"
log = "0.4"
maplit = "1.0"
memmap2 = "0.5"
notify-rust = { version = "4", optional = true }
num-format = "0.4"
regex = "1"
simplelog = "0.10"
smartstring = "0.2"
tempfile = "3"

[features]
notifications = ["notify-rust"]

[profile.release]
debug = true
