[package]
edition = "2018"
name = "fusta"
version = "1.6.1"
license = "CECILL-C"
authors = ["Franklin Delehelle <delehelle@ens.fr>"]
description = "FUSTA leverages the FUSE interface to transparently manipulate multiFASTA files as independent files"
homepage = "https://github.com/delehef/fusta"
repository = "https://github.com/delehef/fusta"
readme = "README.org"
keywords = ["bioinformatics", "fasta", "fuse"]
categories = ["science", "command-line-utilities", "filesystem"]
exclude = [
    "fusta.png",
    "fusta.svg",
    "shell.nix",
]

[dependencies]
anyhow = "1"
ascii_table = "4"
clap = { version = "3.2", features = ["cargo"] }
ctrlc = { version = "3.0", features = ["termination"] }
daemonize = "0.4"
fuser = "0.11"
lazy_static = "1"
libc = "0.2"
log = "0.4"
maplit = "1.0"
memmap2 = "0.5"
notify-rust = { version = "4", optional = true }
num-format = "0.4"
regex = "1"
simplelog = "0.12"
smartstring = "1"
tempfile = "3"

[features]
notifications = ["notify-rust"]

[profile.release]
debug = true
